common: fixes to jStore library and usage, fix for ipad textonly aside, fix for vanishing login on iOS3

--- a/public_html/_R_/common/0/structure.css
+++ b/public_html/_R_/common/0/structure.css
@@ -94,6 +94,10 @@ a[onclick] { cursor: pointer; }
 	width: 100%;
 }
 
+#bannerBox {
+	clear: both;
+}
+
 #activeContent {
 	position: relative;
 	width: 100%;
